sg.tf
resource "aws_security_group" "sg_nginx1" {
  name        = "sg_nginx"
  description = "Allow SSH + ICMP"
  vpc_id      = aws_vpc.vpc1_ireland.id
  provider    = aws.ireland

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${var.my_ip_address}/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg_nginx1"
  }
}

resource "aws_security_group" "sg_flaskApp2" {
  name        = "sg_flaskApp2"
  description = "Allow SSH, ICMP and 5000"
  vpc_id      = aws_vpc.vpc2_ireland.id
  provider    = aws.ireland

  ingress {
    from_port = 5000
    to_port   = 5000
    protocol  = "tcp"
    cidr_blocks = [
      "46.51.128.175/32",
      "3.10.21.183/32",
      "18.135.97.234/32"
    ]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${var.my_ip_address}/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg_nginx2"
  }
}

resource "aws_security_group" "sg_flaskApp3" {
  name        = "sg_nginx"
  description = "Allow SSH + ICMP"
  vpc_id      = aws_vpc.vpc3_ireland.id
  provider    = aws.ireland

  ingress {
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/8"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/8"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg_flaskApp3"
  }
}

resource "aws_security_group" "sg_nginx4" {
  name        = "sg_nginx"
  description = "Allow SSH + ICMP"
  vpc_id      = aws_vpc.vpc4_london.id
  provider    = aws.london

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${var.my_ip_address}/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg_nginx4"
  }
}

resource "aws_security_group" "sg_nginx5" {
  name        = "sg_nginx"
  description = "Allow SSH + ICMP"
  vpc_id      = aws_vpc.vpc5_london.id
  provider    = aws.london

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${var.my_ip_address}/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg_nginx5"
  }
}
